src/gramatica_python.output
Terminals unused in grammar

   NUM


Grammar

    0 $accept: codigo $end

    1 codigo: sentencias

    2 sentencias: sentencia
    3           | sentencias sentencia

    4 sentencia: asignacion
    5          | imprimir
    6          | bucle_w
    7          | bucle_f
    8          | condicion_if

    9 asignacion: IDENTIFICADOR IGUAL expresion

   10 expresion: expresion SUMA tipos
   11          | expresion RESTA tipos
   12          | expresion MULTIPLICACION tipos
   13          | expresion DIVISION tipos
   14          | expresion MAYOR_QUE tipos
   15          | expresion MAYOR_IGUAL_QUE tipos
   16          | expresion MENOR_QUE tipos
   17          | expresion MENOR_IGUAL_QUE tipos
   18          | expresion IGUAL_IGUAL tipos
   19          | expresion NO_IGUAL tipos
   20          | expresion AND tipos
   21          | expresion OR tipos
   22          | IDENTIFICADOR APERTURACORCHETE expresion CIERRECORCHETE
   23          | APERTURACORCHETE elements CIERRECORCHETE
   24          | tipos

   25 elements: NUMERICO
   26         | elements COMA NUMERICO

   27 tipos: IDENTIFICADOR
   28      | NUMERICO
   29      | NUMERICODECIMAL
   30      | CADENA

   31 imprimir: IMPRIMIR APERTURAPARENTESIS expresion CIERREPARENTESIS

   32 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE

   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

   34 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

   35 elif_clauses: /* empty */
   36             | elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias

   37 else_clause: ELSE_CONDICION DOSPUNTOS sentencias
   38            | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
SUMA (258) 10
RESTA (259) 11
MULTIPLICACION (260) 12
DIVISION (261) 13
IGUAL (262) 9
APERTURAPARENTESIS (263) 31 32 33 34 36
CIERREPARENTESIS (264) 31 32 33 34 36
APERTURACORCHETE (265) 22 23
CIERRECORCHETE (266) 22 23
IMPRIMIR (267) 31
MAYOR_QUE (268) 14
MENOR_QUE (269) 16
MAYOR_IGUAL_QUE (270) 15
MENOR_IGUAL_QUE (271) 17
IGUAL_IGUAL (272) 18
NO_IGUAL (273) 19
AND (274) 20
OR (275) 21
WHILE (276) 32
FIN_BUCLE (277) 32
DOSPUNTOS (278) 32 33 34 36 37
FOR_BUCLE (279) 33
FIN_FOR (280) 33
IN (281) 33
RANGE (282) 33
COMA (283) 26
IF_CONDICION (284) 34
ELIF_CONDICION (285) 36
ELSE_CONDICION (286) 37
FIN_CONDICION (287) 34
NUMERICO (288) 25 26 28
NUMERICODECIMAL (289) 29
IDENTIFICADOR (290) 9 22 27 33
CADENA (291) 30
NUM (292)


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
codigo (39)
    on left: 1, on right: 0
sentencias (40)
    on left: 2 3, on right: 1 3 32 33 34 36 37
sentencia (41)
    on left: 4 5 6 7 8, on right: 2 3
asignacion (42)
    on left: 9, on right: 4
expresion (43)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24, on right:
    9 10 11 12 13 14 15 16 17 18 19 20 21 22 31 32 33 34 36
elements (44)
    on left: 25 26, on right: 23 26
tipos (45)
    on left: 27 28 29 30, on right: 10 11 12 13 14 15 16 17 18 19 20
    21 24
imprimir (46)
    on left: 31, on right: 5
bucle_w (47)
    on left: 32, on right: 6
bucle_f (48)
    on left: 33, on right: 7
condicion_if (49)
    on left: 34, on right: 8
elif_clauses (50)
    on left: 35 36, on right: 34 36
else_clause (51)
    on left: 37 38, on right: 34


state 0

    0 $accept: . codigo $end

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    codigo        go to state 6
    sentencias    go to state 7
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 1

   31 imprimir: IMPRIMIR . APERTURAPARENTESIS expresion CIERREPARENTESIS

    APERTURAPARENTESIS  shift, and go to state 14


state 2

   32 bucle_w: WHILE . APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE

    APERTURAPARENTESIS  shift, and go to state 15


state 3

   33 bucle_f: FOR_BUCLE . IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    IDENTIFICADOR  shift, and go to state 16


state 4

   34 condicion_if: IF_CONDICION . APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

    APERTURAPARENTESIS  shift, and go to state 17


state 5

    9 asignacion: IDENTIFICADOR . IGUAL expresion

    IGUAL  shift, and go to state 18


state 6

    0 $accept: codigo . $end

    $end  shift, and go to state 19


state 7

    1 codigo: sentencias .
    3 sentencias: sentencias . sentencia

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    $default  reduce using rule 1 (codigo)

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 8

    2 sentencias: sentencia .

    $default  reduce using rule 2 (sentencias)


state 9

    4 sentencia: asignacion .

    $default  reduce using rule 4 (sentencia)


state 10

    5 sentencia: imprimir .

    $default  reduce using rule 5 (sentencia)


state 11

    6 sentencia: bucle_w .

    $default  reduce using rule 6 (sentencia)


state 12

    7 sentencia: bucle_f .

    $default  reduce using rule 7 (sentencia)


state 13

    8 sentencia: condicion_if .

    $default  reduce using rule 8 (sentencia)


state 14

   31 imprimir: IMPRIMIR APERTURAPARENTESIS . expresion CIERREPARENTESIS

    APERTURACORCHETE  shift, and go to state 21
    NUMERICO          shift, and go to state 22
    NUMERICODECIMAL   shift, and go to state 23
    IDENTIFICADOR     shift, and go to state 24
    CADENA            shift, and go to state 25

    expresion  go to state 26
    tipos      go to state 27


state 15

   32 bucle_w: WHILE APERTURAPARENTESIS . expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE

    APERTURACORCHETE  shift, and go to state 21
    NUMERICO          shift, and go to state 22
    NUMERICODECIMAL   shift, and go to state 23
    IDENTIFICADOR     shift, and go to state 24
    CADENA            shift, and go to state 25

    expresion  go to state 28
    tipos      go to state 27


state 16

   33 bucle_f: FOR_BUCLE IDENTIFICADOR . IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    IN  shift, and go to state 29


state 17

   34 condicion_if: IF_CONDICION APERTURAPARENTESIS . expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

    APERTURACORCHETE  shift, and go to state 21
    NUMERICO          shift, and go to state 22
    NUMERICODECIMAL   shift, and go to state 23
    IDENTIFICADOR     shift, and go to state 24
    CADENA            shift, and go to state 25

    expresion  go to state 30
    tipos      go to state 27


state 18

    9 asignacion: IDENTIFICADOR IGUAL . expresion

    APERTURACORCHETE  shift, and go to state 21
    NUMERICO          shift, and go to state 22
    NUMERICODECIMAL   shift, and go to state 23
    IDENTIFICADOR     shift, and go to state 24
    CADENA            shift, and go to state 25

    expresion  go to state 31
    tipos      go to state 27


state 19

    0 $accept: codigo $end .

    $default  accept


state 20

    3 sentencias: sentencias sentencia .

    $default  reduce using rule 3 (sentencias)


state 21

   23 expresion: APERTURACORCHETE . elements CIERRECORCHETE

    NUMERICO  shift, and go to state 32

    elements  go to state 33


state 22

   28 tipos: NUMERICO .

    $default  reduce using rule 28 (tipos)


state 23

   29 tipos: NUMERICODECIMAL .

    $default  reduce using rule 29 (tipos)


state 24

   22 expresion: IDENTIFICADOR . APERTURACORCHETE expresion CIERRECORCHETE
   27 tipos: IDENTIFICADOR .

    APERTURACORCHETE  shift, and go to state 34

    $default  reduce using rule 27 (tipos)


state 25

   30 tipos: CADENA .

    $default  reduce using rule 30 (tipos)


state 26

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   31 imprimir: IMPRIMIR APERTURAPARENTESIS expresion . CIERREPARENTESIS

    SUMA              shift, and go to state 35
    RESTA             shift, and go to state 36
    MULTIPLICACION    shift, and go to state 37
    DIVISION          shift, and go to state 38
    CIERREPARENTESIS  shift, and go to state 39
    MAYOR_QUE         shift, and go to state 40
    MENOR_QUE         shift, and go to state 41
    MAYOR_IGUAL_QUE   shift, and go to state 42
    MENOR_IGUAL_QUE   shift, and go to state 43
    IGUAL_IGUAL       shift, and go to state 44
    NO_IGUAL          shift, and go to state 45
    AND               shift, and go to state 46
    OR                shift, and go to state 47


state 27

   24 expresion: tipos .

    $default  reduce using rule 24 (expresion)


state 28

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   32 bucle_w: WHILE APERTURAPARENTESIS expresion . CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE

    SUMA              shift, and go to state 35
    RESTA             shift, and go to state 36
    MULTIPLICACION    shift, and go to state 37
    DIVISION          shift, and go to state 38
    CIERREPARENTESIS  shift, and go to state 48
    MAYOR_QUE         shift, and go to state 40
    MENOR_QUE         shift, and go to state 41
    MAYOR_IGUAL_QUE   shift, and go to state 42
    MENOR_IGUAL_QUE   shift, and go to state 43
    IGUAL_IGUAL       shift, and go to state 44
    NO_IGUAL          shift, and go to state 45
    AND               shift, and go to state 46
    OR                shift, and go to state 47


state 29

   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN . RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    RANGE  shift, and go to state 49


state 30

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   34 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion . CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

    SUMA              shift, and go to state 35
    RESTA             shift, and go to state 36
    MULTIPLICACION    shift, and go to state 37
    DIVISION          shift, and go to state 38
    CIERREPARENTESIS  shift, and go to state 50
    MAYOR_QUE         shift, and go to state 40
    MENOR_QUE         shift, and go to state 41
    MAYOR_IGUAL_QUE   shift, and go to state 42
    MENOR_IGUAL_QUE   shift, and go to state 43
    IGUAL_IGUAL       shift, and go to state 44
    NO_IGUAL          shift, and go to state 45
    AND               shift, and go to state 46
    OR                shift, and go to state 47


state 31

    9 asignacion: IDENTIFICADOR IGUAL expresion .
   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos

    SUMA             shift, and go to state 35
    RESTA            shift, and go to state 36
    MULTIPLICACION   shift, and go to state 37
    DIVISION         shift, and go to state 38
    MAYOR_QUE        shift, and go to state 40
    MENOR_QUE        shift, and go to state 41
    MAYOR_IGUAL_QUE  shift, and go to state 42
    MENOR_IGUAL_QUE  shift, and go to state 43
    IGUAL_IGUAL      shift, and go to state 44
    NO_IGUAL         shift, and go to state 45
    AND              shift, and go to state 46
    OR               shift, and go to state 47

    $default  reduce using rule 9 (asignacion)


state 32

   25 elements: NUMERICO .

    $default  reduce using rule 25 (elements)


state 33

   23 expresion: APERTURACORCHETE elements . CIERRECORCHETE
   26 elements: elements . COMA NUMERICO

    CIERRECORCHETE  shift, and go to state 51
    COMA            shift, and go to state 52


state 34

   22 expresion: IDENTIFICADOR APERTURACORCHETE . expresion CIERRECORCHETE

    APERTURACORCHETE  shift, and go to state 21
    NUMERICO          shift, and go to state 22
    NUMERICODECIMAL   shift, and go to state 23
    IDENTIFICADOR     shift, and go to state 24
    CADENA            shift, and go to state 25

    expresion  go to state 53
    tipos      go to state 27


state 35

   10 expresion: expresion SUMA . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 55


state 36

   11 expresion: expresion RESTA . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 56


state 37

   12 expresion: expresion MULTIPLICACION . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 57


state 38

   13 expresion: expresion DIVISION . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 58


state 39

   31 imprimir: IMPRIMIR APERTURAPARENTESIS expresion CIERREPARENTESIS .

    $default  reduce using rule 31 (imprimir)


state 40

   14 expresion: expresion MAYOR_QUE . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 59


state 41

   16 expresion: expresion MENOR_QUE . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 60


state 42

   15 expresion: expresion MAYOR_IGUAL_QUE . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 61


state 43

   17 expresion: expresion MENOR_IGUAL_QUE . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 62


state 44

   18 expresion: expresion IGUAL_IGUAL . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 63


state 45

   19 expresion: expresion NO_IGUAL . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 64


state 46

   20 expresion: expresion AND . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 65


state 47

   21 expresion: expresion OR . tipos

    NUMERICO         shift, and go to state 22
    NUMERICODECIMAL  shift, and go to state 23
    IDENTIFICADOR    shift, and go to state 54
    CADENA           shift, and go to state 25

    tipos  go to state 66


state 48

   32 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS . DOSPUNTOS sentencias FIN_BUCLE

    DOSPUNTOS  shift, and go to state 67


state 49

   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE . APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    APERTURAPARENTESIS  shift, and go to state 68


state 50

   34 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS . DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION

    DOSPUNTOS  shift, and go to state 69


state 51

   23 expresion: APERTURACORCHETE elements CIERRECORCHETE .

    $default  reduce using rule 23 (expresion)


state 52

   26 elements: elements COMA . NUMERICO

    NUMERICO  shift, and go to state 70


state 53

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   22          | IDENTIFICADOR APERTURACORCHETE expresion . CIERRECORCHETE

    SUMA             shift, and go to state 35
    RESTA            shift, and go to state 36
    MULTIPLICACION   shift, and go to state 37
    DIVISION         shift, and go to state 38
    CIERRECORCHETE   shift, and go to state 71
    MAYOR_QUE        shift, and go to state 40
    MENOR_QUE        shift, and go to state 41
    MAYOR_IGUAL_QUE  shift, and go to state 42
    MENOR_IGUAL_QUE  shift, and go to state 43
    IGUAL_IGUAL      shift, and go to state 44
    NO_IGUAL         shift, and go to state 45
    AND              shift, and go to state 46
    OR               shift, and go to state 47


state 54

   27 tipos: IDENTIFICADOR .

    $default  reduce using rule 27 (tipos)


state 55

   10 expresion: expresion SUMA tipos .

    $default  reduce using rule 10 (expresion)


state 56

   11 expresion: expresion RESTA tipos .

    $default  reduce using rule 11 (expresion)


state 57

   12 expresion: expresion MULTIPLICACION tipos .

    $default  reduce using rule 12 (expresion)


state 58

   13 expresion: expresion DIVISION tipos .

    $default  reduce using rule 13 (expresion)


state 59

   14 expresion: expresion MAYOR_QUE tipos .

    $default  reduce using rule 14 (expresion)


state 60

   16 expresion: expresion MENOR_QUE tipos .

    $default  reduce using rule 16 (expresion)


state 61

   15 expresion: expresion MAYOR_IGUAL_QUE tipos .

    $default  reduce using rule 15 (expresion)


state 62

   17 expresion: expresion MENOR_IGUAL_QUE tipos .

    $default  reduce using rule 17 (expresion)


state 63

   18 expresion: expresion IGUAL_IGUAL tipos .

    $default  reduce using rule 18 (expresion)


state 64

   19 expresion: expresion NO_IGUAL tipos .

    $default  reduce using rule 19 (expresion)


state 65

   20 expresion: expresion AND tipos .

    $default  reduce using rule 20 (expresion)


state 66

   21 expresion: expresion OR tipos .

    $default  reduce using rule 21 (expresion)


state 67

   32 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS . sentencias FIN_BUCLE

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 72
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 68

   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS . expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    APERTURACORCHETE  shift, and go to state 21
    NUMERICO          shift, and go to state 22
    NUMERICODECIMAL   shift, and go to state 23
    IDENTIFICADOR     shift, and go to state 24
    CADENA            shift, and go to state 25

    expresion  go to state 73
    tipos      go to state 27


state 69

   34 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS . sentencias elif_clauses else_clause FIN_CONDICION

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 74
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 70

   26 elements: elements COMA NUMERICO .

    $default  reduce using rule 26 (elements)


state 71

   22 expresion: IDENTIFICADOR APERTURACORCHETE expresion CIERRECORCHETE .

    $default  reduce using rule 22 (expresion)


state 72

    3 sentencias: sentencias . sentencia
   32 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias . FIN_BUCLE

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FIN_BUCLE      shift, and go to state 75
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 73

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion . CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR

    SUMA              shift, and go to state 35
    RESTA             shift, and go to state 36
    MULTIPLICACION    shift, and go to state 37
    DIVISION          shift, and go to state 38
    CIERREPARENTESIS  shift, and go to state 76
    MAYOR_QUE         shift, and go to state 40
    MENOR_QUE         shift, and go to state 41
    MAYOR_IGUAL_QUE   shift, and go to state 42
    MENOR_IGUAL_QUE   shift, and go to state 43
    IGUAL_IGUAL       shift, and go to state 44
    NO_IGUAL          shift, and go to state 45
    AND               shift, and go to state 46
    OR                shift, and go to state 47


state 74

    3 sentencias: sentencias . sentencia
   34 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias . elif_clauses else_clause FIN_CONDICION

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    $default  reduce using rule 35 (elif_clauses)

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13
    elif_clauses  go to state 77


state 75

   32 bucle_w: WHILE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_BUCLE .

    $default  reduce using rule 32 (bucle_w)


state 76

   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS . DOSPUNTOS sentencias FIN_FOR

    DOSPUNTOS  shift, and go to state 78


state 77

   34 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses . else_clause FIN_CONDICION
   36 elif_clauses: elif_clauses . ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias

    ELIF_CONDICION  shift, and go to state 79
    ELSE_CONDICION  shift, and go to state 80

    $default  reduce using rule 38 (else_clause)

    else_clause  go to state 81


state 78

   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS . sentencias FIN_FOR

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 82
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 79

   36 elif_clauses: elif_clauses ELIF_CONDICION . APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias

    APERTURAPARENTESIS  shift, and go to state 83


state 80

   37 else_clause: ELSE_CONDICION . DOSPUNTOS sentencias

    DOSPUNTOS  shift, and go to state 84


state 81

   34 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause . FIN_CONDICION

    FIN_CONDICION  shift, and go to state 85


state 82

    3 sentencias: sentencias . sentencia
   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias . FIN_FOR

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    FIN_FOR        shift, and go to state 86
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 83

   36 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS . expresion CIERREPARENTESIS DOSPUNTOS sentencias

    APERTURACORCHETE  shift, and go to state 21
    NUMERICO          shift, and go to state 22
    NUMERICODECIMAL   shift, and go to state 23
    IDENTIFICADOR     shift, and go to state 24
    CADENA            shift, and go to state 25

    expresion  go to state 87
    tipos      go to state 27


state 84

   37 else_clause: ELSE_CONDICION DOSPUNTOS . sentencias

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    sentencias    go to state 88
    sentencia     go to state 8
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 85

   34 condicion_if: IF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias elif_clauses else_clause FIN_CONDICION .

    $default  reduce using rule 34 (condicion_if)


state 86

   33 bucle_f: FOR_BUCLE IDENTIFICADOR IN RANGE APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS sentencias FIN_FOR .

    $default  reduce using rule 33 (bucle_f)


state 87

   10 expresion: expresion . SUMA tipos
   11          | expresion . RESTA tipos
   12          | expresion . MULTIPLICACION tipos
   13          | expresion . DIVISION tipos
   14          | expresion . MAYOR_QUE tipos
   15          | expresion . MAYOR_IGUAL_QUE tipos
   16          | expresion . MENOR_QUE tipos
   17          | expresion . MENOR_IGUAL_QUE tipos
   18          | expresion . IGUAL_IGUAL tipos
   19          | expresion . NO_IGUAL tipos
   20          | expresion . AND tipos
   21          | expresion . OR tipos
   36 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion . CIERREPARENTESIS DOSPUNTOS sentencias

    SUMA              shift, and go to state 35
    RESTA             shift, and go to state 36
    MULTIPLICACION    shift, and go to state 37
    DIVISION          shift, and go to state 38
    CIERREPARENTESIS  shift, and go to state 89
    MAYOR_QUE         shift, and go to state 40
    MENOR_QUE         shift, and go to state 41
    MAYOR_IGUAL_QUE   shift, and go to state 42
    MENOR_IGUAL_QUE   shift, and go to state 43
    IGUAL_IGUAL       shift, and go to state 44
    NO_IGUAL          shift, and go to state 45
    AND               shift, and go to state 46
    OR                shift, and go to state 47


state 88

    3 sentencias: sentencias . sentencia
   37 else_clause: ELSE_CONDICION DOSPUNTOS sentencias .

    IMPRIMIR       shift, and go to state 1
    WHILE          shift, and go to state 2
    FOR_BUCLE      shift, and go to state 3
    IF_CONDICION   shift, and go to state 4
    IDENTIFICADOR  shift, and go to state 5

    $default  reduce using rule 37 (else_clause)

    sentencia     go to state 20
    asignacion    go to state 9
    imprimir      go to state 10
    bucle_w       go to state 11
    bucle_f       go to state 12
    condicion_if  go to state 13


state 89

   36 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS . DOSPUNTOS sentencias

    DOSPUNTOS  shift, and go to state 90


state 90

   36 elif_clauses: elif_clauses ELIF_CONDICION APERTURAPARENTESIS expresion CIERREPARENTESIS DOSPUNTOS . sentencias
